Fixed horizontal scrolling issue

--- a/Style.css
+++ b/Style.css
@@ -183,15 +183,16 @@ h2{
   color: #EEE0E5;
   text-align: left;
   position: relative;
-    left: 30px;
+    margin-left: 30px;
      font-family: helvetica;
+
 }
 
-h3{ 
+h3 { 
   color: #EEE0E5;
   text-align: left;
   position: relative;
-    left: 30px;
+    margin-left: 30px;
     font-family: helvetica;
     font-size: 13px;
 }
